--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/kti03/miniconda3/envs/uctbm/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -58,9 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by loading the test results to generate the plots for tile classifier performance from Fig.1:\n",
-    "\n",
-    "Make sure to set `RUN_DIR` to the directory where the predicitions from the different runs are stored."
+    "Make sure to set the environment variable `DATASET_LOCATION` correctly. Also set the path `RUN_DIR` to where the predictions are stored."
    ]
   },
   {
@@ -221,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we plot the Accuracy-Reject Curves from Fig.2:"
+    "Here we plot the Accuracy-Reject Curves from Fig.1:"
    ]
   },
   {
@@ -293,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For showing the most certain and most uncertain tiles (Fig. 3), we choose the uncertainties generated from the first ResNet Ensemble:"
+    "For showing the most certain and most uncertain tiles (Fig. 2), we choose the uncertainties generated from the first ResNet Ensemble:"
    ]
   },
   {
@@ -349,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also visualize the tile-predicitons on slide-level (Fig. 4), generated from the first ResNet Ensemble:"
+    "We can also visualize the tile-predicitons on slide-level (Fig. 3), generated from the first ResNet Ensemble:"
    ]
   },
   {
